...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
...
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <EditText

                            android:id="@+id/editTextFacultyFrom"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custombuttondesc"

...



                        android:layout_marginStart="5dp">

                        <EditText
                            android:id="@+id/editTextRoomDetailsFaculty"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"

                            android:layout_width="0dp"
                            android:layout_height="match_parent"

                            android:layout_weight="1"
...
                            android:inputType="textMultiLine"

                            android:lines="1"
                            android:maxLines="2"


                            android:text="+ Add Rooms"
                            android:textAlignment="center"

                            android:textAllCaps="false"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/termsRelativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp">


                        <android.support.v7.widget.CardView
...

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                        <RelativeLayout
                            android:id="@+id/agreeTermsRelativeLayout"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"

                            android:layout_below="@id/contractedCardView"
                            android:orientation="horizontal">

...

                        </RelativeLayout>

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btnCheckAvailFaculty"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="50dp"
...
