
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.ac.iiitd.guestacc.FragmentPersonalGuestDetails">

    <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="1dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/upperRelativeLayout">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_alignParentLeft="true"
                            android:maxHeight="10dp"
                            android:maxWidth="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_gravity="left"
                            android:id="@+id/ImageView_guest"/>
                        <TextView
                            android:id="@+id/txtGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:paddingTop="15dp"
                            android:textStyle="bold"
                            android:text="Gend" />

                        <TextView
                            android:id="@+id/txtRoomId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="140dp"
                            android:paddingTop="15dp"
                            android:text="Roomid"
                            android:textStyle="bold" />
                        <!--android:layout_centerHorizontal="true"-->

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnExpand"
                            android:paddingTop="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:paddingBottom="10dp"
                            android:scaleType="fitXY"
                            android:background="@color/white"
                            android:src="@drawable/sidearrow"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnColapse"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/downarrow"
                            android:background="@color/white"
                            android:layout_alignParentRight="true"
                            android:visibility="gone"/>

                        <!--android:layout_alignParentRight="true"-->
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/guest_details_layoutHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@+id/upperRelativeLayout">
                        <!--android:layout_below="@+id/upperRelativeLayout"-->
                        <EditText
                            android:id="@+id/et_FirstName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Name"
                            android:inputType="textPersonName"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="6dp"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/et_Age"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Age"
                            android:layout_marginTop="6dp"
                            android:inputType="number"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="15dp"
                            android:visibility="gone"/>
                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


</FrameLayout>
