<resources>
    <string name="app_name">GueStay</string>
    <string name="student">Student</string>
    <string name="faculty_staff">Faculty/Staff</string>
    <string name="admin">Admin</string>
    <string name="imgdetails">IIITD</string>
    <string name="check_availability">Check Availability</string>


    <string name="check_in">Check-in \n</string>

    <string name="check_out">Check-out \n</string>
    <string name="associated_room_id">Room(s) \n</string>
    <string name="male">Male(s) \n</string>
    <string name="female">Female(s) \n</string>
    <string name="let_s_go">Check Availability</string>
    <string name="rooms">Rooms</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="male_s">Male(s)</string>
    <string name="female_s">Female(s)</string>
    <string name="more_options">More Options...</string>
    <string name="inr">INR 1500</string>
    <string name="cardVal">0</string>
    <string name="check_avail">Home</string>
    <string name="avail_rooms">Available Rooms</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="avail">"Available : "</string>
    <string name="errormsg">"Error : "</string>
    <string name="title_activity_faculty_home">FacultyHomeActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AdminPendingApproval">Pending Approval</string>
    <string name="Admin_ValidatePayment">Verify Payment</string>
    <string name="FacultyRegistrationActivity">Registration</string>
    <string name="AdminStatusForToday">Status</string>
    <string name="AdminCancelBookings">Cancel Booking</string>


    <string name="add_room">+ Add Room</string>
    <string name="room_details">Room ID </string>
    <string name="total_price">Total Price: ₹</string>
    <string name="total_rooms">Total Rooms:</string>
    <string name="price_rs">Price: ₹</string>
    <string name="only_rs">₹</string>
    <string name="preferences">Preferences</string>
    <string name="book">Book</string>
    <string name="termscontracted">1 - Maximum two people can stay in any Room/Flat. \n\
2 - Only Female Guests can stay in Girls Hostel. \n\</string>
    <string name="termsexpanded">1 - Maximum two people can stay in any Room/Flat. \n\
2 - Only Female Guests can stay in Girls Hostel. \n\
3 - Students can book rooms only for their Parents and immediate siblings.\n\
    4 - Only Faculty/Staff are allowed to book Rooms/Flats in Faculty Residence\n\
    5 - Student\'s Guests can stay for a maximum duration of three days\n\
    6 - Faculty Guests can stay for any number of days but subjected to cancellation if urgent requirement for Institute/Project emerges.</string>
    <string name="i_agree_with_the_terms_and_conditions">I agree with the terms and conditions.</string>
    <string name="notregistered_general_message">You are not currently registered as Faculty/Staff.</string>
    <string name="not_registered">Do you want to send registration request to the Admin?</string>
    <string name="reg_not_found">Faculty/Staff Not Found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="year_of_joining">Year of Joining</string>
    <string name="email_idreg">email-id</string>
    <string name="request_for">Request for</string>
    <string name="name">Name</string>
    <string name="submit_request">Submit Request</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="adminRoomStatusSpinner">
        <item>Available</item>
        <item>Booked</item>
        <item>Pending Payment</item>
    </string-array>
    <string name="title_activity_test">TestAct</string>
    <string name="admhome">Home</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="total">Total ₹</string>
    <string name="sppersons"> Persons</string>
    <string name="sprooms"> Rooms</string>
    <string name="status">Status</string>
    <string name="title_activity_admin_registration">AdminRegistration</string>
</resources>
